[workspace]
members = ["crates/*"]

[workspace.dependencies]
num-traits = "0.2.16"

[package]
name = "orml"
version = "0.1.0"
edition = "2021"

[dependencies]
vector = {path = "crates/vector", optional = true}
traits = {path = "crates/traits", optional = true}
quaternion = { path = "crates/quaternion", optional = true}

[features]
default = ["vector", "traits", "quaternion"]
vector = ["dep:vector", "traits", "dep:traits"]
traits = ["dep:traits"]
quaternion = ["dep:quaternion"]

[lib]
name="orml"
path="src/lib.rs"
