[workspace]
members = ["crates/*"]

[workspace.dependencies]
num-traits = "0.2.16"
astro-float = "0.7.1"
lazy_static = "1.4.0"
orml_vector = {path = "crates/vector"}
orml_traits = {path = "crates/traits"}
orml_quaternion = { path = "crates/quaternion"}
orml_easy_big_float = {path = "crates/easy_big_float"}

[package]
name = "orml"
version = "0.1.0"
edition = "2021"

[dependencies]
orml_vector = {workspace = true}
orml_traits = {workspace = true}
orml_quaternion = {workspace = true}
orml_easy_big_float = {workspace = true}

[features]
# default = ["vector", "traits", "quaternion", "easy_big_float"]
# vector = ["dep:vector", "traits", "dep:traits"]
# traits = ["dep:traits"]
# quaternion = ["dep:quaternion"]
# easy_big_float = ["dep:easy_big_float","traits"]

[lib]
name="orml"
path="src/lib.rs"
