[package]
name = "orml_easy_big_float"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astro-float = {workspace = true}
lazy_static = {workspace = true}
num-traits = {workspace = true}
orml_vector = {workspace = true}
orml_traits = {workspace = true}
