[package]
name = "quaternion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vector = { path = "../vector", optional = true}

[features]
default = ["vector"]
vector = ["dep:vector"]

[dev-dependencies]

