[package]
name = "traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["impl-float"]
impls = []
impl-float = ["impls","impl-f64","impl-f32"]
impl-f64 = ["impls"]
impl-f32 = ["impls"]