[package]
name = "orml_vector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = {workspace = true}
orml_traits = {workspace = true}


[features]
#default = ["num-traits"]
#num-traits = []
